--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 *.iml
 .idea
+react-begin/node_modules
+react-begin/public
+react-begin/.gitignore
+react-begin/package.json
+react-begin/package-lock.json
+react-begin/README.md
